@@ -217,6 +217,8 @@ typedef struct _PH_PROCESS_ITEM
     PH_CIRCULAR_BUFFER_ULONG64 IoOtherHistory;
     PH_CIRCULAR_BUFFER_SIZE_T PrivateBytesHistory;
     //PH_CIRCULAR_BUFFER_SIZE_T WorkingSetHistory;
+
+    PH_UINTPTR_DELTA PrivateBytesDelta;
 } PH_PROCESS_ITEM, *PPH_PROCESS_ITEM;
 
 // The process itself is dead.
